crates/willikins-providers-doppler/tests/it/snapshots/it__catalog_parity__doppler_config_inheritable_gate_spec.snap
---
source: crates/willikins-providers-doppler/tests/it/catalog_parity.rs
expression: "spec_json(DopplerConfigInheritableGate::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "A gate: whether a Doppler config exists and is inheritable.",
  "inputs": {
    "config": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    }
  },
  "key": [],
  "name": "doppler.config.inheritable.gate",
  "outputs": {
    "config": "DopplerConfig"
  },
  "pure": true
}
