crates/willikins-providers-doppler/tests/it/snapshots/it__catalog_parity__doppler_config_inherits_ensure_spec.snap
---
source: crates/willikins-providers-doppler/tests/it/catalog_parity.rs
assertion_line: 179
expression: "spec_json(DopplerConfigInheritsEnsure::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Ensure a Doppler config inherits a set of base configs.",
  "inputs": {
    "config": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    },
    "inherits": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "list<DopplerConfig>"
      }
    }
  },
  "key": [
    "config"
  ],
  "name": "doppler.config.inherits.ensure",
  "outputs": {
    "config": "DopplerConfig"
  },
  "pure": false
}
