crates/willikins-providers-doppler/tests/it/snapshots/it__catalog_parity__doppler_secret_name_gate_spec.snap
---
source: crates/willikins-providers-doppler/tests/it/catalog_parity.rs
expression: "spec_json(DopplerSecretNameGate::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "A gate: whether a secret name is visible in a Doppler config, set there or inherited.",
  "inputs": {
    "config": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    },
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "SecretName"
      }
    }
  },
  "key": [],
  "name": "doppler.secret_name.gate",
  "outputs": {
    "config": "DopplerConfig"
  },
  "pure": true
}
