crates/willikins-providers-doppler/tests/it/snapshots/it__catalog_parity__doppler_service_token_rotate_spec.snap
---
source: crates/willikins-providers-doppler/tests/it/catalog_parity.rs
expression: "spec_json(DopplerServiceTokenRotate::new(test_client()).spec())"
---
{
  "class": "destructive",
  "description": "Revoke and re-mint a Doppler service token.",
  "inputs": {
    "config": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    },
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerTokenName"
      }
    }
  },
  "key": [
    "config",
    "name"
  ],
  "name": "doppler.service_token.rotate",
  "outputs": {
    "token": "DopplerServiceToken"
  },
  "pure": false
}
